--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -10,27 +9,28 @@
 <body>
   <div class="matrix-background"></div>
   <div class="content">
-    <h1>Jinghua Gao 高菁华</h1>
+    <h1> Coco Gao(Jinghua Gao 高菁华)</h1>
     <p><strong>CTO / AI Architect / Open Source Contributor</strong></p>
     <p>📍 Shanghai, China | ✉️ gaojh4@gmail.com | 📞 +86 181 4192 7740</p>
-    <p>🧠 9+ years experience | 🗣️ Fluent English</p>
-
     <h2>🧩 About Me</h2>
-    <p>AI researcher & builder. I lead small teams to ship big things — from multimodal agents and AI video editors to smart hardware integrations. Active in open-source, published researcher, and former OpenStack core contributor.</p>
+    <p>AI researcher & builder.
+      I lead small teams to ship big things — from multimodal agents platform to smart hardware integrations.
+      Active in open-source, published researcher, and former OpenStack core contributor.</p>
 
     <h2>🚀 Career Highlights</h2>
     <ul>
-      <li>🧑‍💼 CTO of 2 AI startups, leading 6 products from 0 → 1</li>
-      <li>🌍 One AI product successfully launched internationally</li>
-      <li>🎬 10M+ users impacted through video enhancement</li>
+      <li>🧑‍💼 CTO of 2 AI startups, leading 8 products from 0 → 1</li>
+      <li>🌍 One AI product successfully launched internationally: <a href="https://www.ai-headshot-generator.org/">AI
+          Headshot Generator</a></li>
+      <li>🎬 Generative AI algorithm leader of <a href="https://www.opus.pro/">OpusClip</a>, #1 video clipping tools which
+        reached 20M+ users</li>
       <li>✨ >90% identity consistency in avatar generation</li>
-      <li>🧪 First author of CCF-B AI paper</li>
       <li>🔧 Core Reviewer for OpenStack Cyborg</li>
-      <li>🎤 5x featured speaker on OpenStack.org</li>
+      <li>🎤 Featured speaker on OpenStack.org</li>
     </ul>
 
     <h2>💼 Work Experience</h2>
-    <p><strong>CTO – Emergent AI</strong> (Oct 2024 – Present)</p>
+    <p><strong>CTO – Plandary AI</strong> (Oct 2024 – Present)</p>
     <ul>
       <li>Architected and launched 6 AI products</li>
       <li>Built LLM agent framework for smart glasses</li>
@@ -45,14 +45,58 @@
       <li>🧠 Deep Learning: Transformers, PyTorch, TensorFlow</li>
       <li>⚙️ Edge AI: Quantization, pruning</li>
       <li>☁️ Cloud: OpenStack, Kubernetes</li>
+      <li>🔍 Research: Multi-modal, LLM Evaluation</li>
     </ul>
 
     <h2>📚 Publications & Open Source</h2>
     <ul>
-      <li>📝 IJCNN 2021: Essay Scoring with Transformers</li>
+      <li class="publication-item">
+        <span class="ccf-badge">CCF-B</span>
+        IJCNN 2022: A Novel Distilled Generative Essay Polish System via Hierarchical Pre-Training
+      </li>
+      <li class="publication-item">
+        <span class="ccf-badge">CCF-B</span>
+        IJCNN 2021: A bi-modal automated essay scoring system for handwritten essays
+      </li>
+      <li class="publication-item">
+        <span class="ccf-badge">CCF-B</span>
+        IJCNN 2021: VisDG: Towards Spontaneous Visual Dialogue Generation
+      </li>
       <li>🔧 OpenStack Cyborg Core Reviewer</li>
-      <li>🎤 5x Featured Talks</li>
     </ul>
+<h3>🎤 5+ English Featured Talks</h3>
+<div class="video-container">
+  <div class="video-item">
+    <p>OpenStack Summit 2019 | as the Project Core Reviewer to update project progress</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/ynszsvkBmHw?start=15" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
+  </div>
+  <div class="video-item">
+    <p>OpenStack Summit 2019 | as the main speaker</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/Rvu0-aOcVIg?start=124" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
+  </div>
+  <div class="video-item">
+    <p>OpenStack Summit 2018 | as the main speaker</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/CAfRTvEx0TA?start=152" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
+  </div>
+  <div class="video-item">
+    <p>OpenStack Summit 2019 | as a joint speaker</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/xqwxE0dn6MA?start=59" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
+  </div>
+  <div class="video-item">
+    <p>OpenStack PTG 2019 | as the joint organizer and speaker</p>
+    <iframe width="560" height="315" src="https://www.youtube.com/embed/dEPhtD7aa_o" frameborder="0"
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+      allowfullscreen></iframe>
+  </div>
+</div>
   </div>
 
   <script>
@@ -62,18 +106,20 @@
     const ctx = canvas.getContext('2d');
     let w = canvas.width = window.innerWidth;
     let h = canvas.height = window.innerHeight;
-    const cols = Math.floor(w / 20);
+          const cols = Math.floor(w / 15);
     const ypos = Array(cols).fill(0);
     const matrix = () => {
       ctx.fillStyle = '#0001';
       ctx.fillRect(0, 0, w, h);
       ctx.fillStyle = '#0f0';
-      ctx.font = '15pt monospace';
+      ctx.font = '12pt monospace';
       ypos.forEach((y, ind) => {
         const text = String.fromCharCode(33 + Math.random() * 94);
-        const x = ind * 20;
+        const x = ind * 15;
+        const opacity = Math.random() * 0.5 + 0.5;
+        ctx.fillStyle = `rgba(0, 255, 0, ${opacity})`;
         ctx.fillText(text, x, y);
-        if (y > h + Math.random() * 10000) ypos[ind] = 0;
+        if (y > h + Math.random() * 1000) ypos[ind] = 0;
         else ypos[ind] = y + 20;
       });
     };
@@ -81,6 +127,8 @@
     window.onresize = () => {
       w = canvas.width = window.innerWidth;
       h = canvas.height = window.innerHeight;
+      ypos.length = Math.floor(w / 15);
+      ypos.fill(0);
     };
   </script>
 </body>
